# agent-ship-flow

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md  README.zh-CN.md  agent-integration.md  quickstart-zh.md  quickstart.md  ship-flow-quickstart-zh.md  ship-flow-quickstart.md
docs/superpowers/plans/: 2026-07-16-scope-authorized-autonomy.md
docs/superpowers/specs/: 2026-07-16-repository-entry-and-ci-design.md  2026-07-16-scope-authorized-autonomy-design.md
scripts/: __init__.py  install-codex-skill.py  install_codex_skill.py
skills/ship-flow/: SKILL.md
skills/ship-flow/agents/: openai.yaml
skills/ship-flow/references/: roles.md  workflow.md
src/ship_flow/: __init__.py  authorization.py  cli.py  gitops.py  manifest.py  model.py  reconcile.py  release.py  review.py  runner.py  store.py  subject.py  sync.py  verify.py  workflow.py
tests/: support.py
tests/integration/: test_cli.py  test_gitops.py  test_reconcile.py  test_release.py  test_sync.py  test_verify.py  test_workflow.py
tests/skill/: pressure-scenarios.md  validation-receipt.json
tests/skill/microtests/: SF-08-scope-expansion.json
tests/unit/: test_authorization.py  test_installer.py  test_manifest.py  test_review.py  test_runner.py  test_skill_microtests.py  test_skill_pressure_semantics.py  test_store.py
(+16 files in other folders)
