[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ship-flow"
version = "0.1.0"
description = "A durable, reviewable Git shipping workflow for AI agents"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = []
license = {file = "LICENSE"}
authors = [
  {name = "Aidenwu0209"},
]
keywords = ["agents", "automation", "git", "release", "review", "verification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/Aidenwu0209/agent-ship-flow"
Documentation = "https://github.com/Aidenwu0209/agent-ship-flow#readme"
Issues = "https://github.com/Aidenwu0209/agent-ship-flow/issues"

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[project.scripts]
ship = "ship_flow.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
